<resources>
    <string name="app_name">Graves U.S.A.</string>
    <string name="blink">Eugene Blink</string>
    <string name="hello_world">Hello World</string>
    <string name="eugene_blink">Eugene Blink</string>
    <string name="nick_simonelli">Nick Simonelli</string>
    <string name="tim_newport">Tim Newport on work PC</string>

    <string name="title_activity_login">Graves U.S.A</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="terms_policys"><u>Terms and Privacy Policy</u></string>
    <string name="reporting_for_duty">\nReporting for Duty!!!\n</string>
    <!-- Strings related to NearBy Search -->
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="search">Search</string>
    <string name="send_the_search_party">Send the search party</string>
    <string name="find_a_marker">Find a Marker</string>
    <!-- Strings related to History -->
    <string name="buttonReturn">Return to Main Screen</string>
    <string name="history">HISTORY</string>
    <string name="title_activity_landing">Landing Page</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Registration</string>
    <string name="displaySub">New Submission</string>
    <string name="ranklvl">Rank</string>
    <string name="displayUp">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hist_img_tip">Preview Marker Image</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Loading...</string>
    <string name="error_message">Error processing request</string>
    <string name="agreement">Agreement</string>

</resources>
