<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen_background"

    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="franklin.register_graves2.Login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <!-- android:alpha=".5" sets 50% transparency -->

    <ScrollView
        android:id="@+id/login_form"
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".5"
        android:background="@android:color/background_dark"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="cursive"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                tools:text="@string/reporting_for_duty" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_action_name"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:theme="@style/Theme.AppCompat"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:bufferType="editable"
                android:drawableStart="@drawable/ic_action_lock"
                android:fontFamily="monospace"
                android:hint="@string/prompt_password"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:theme="@style/Theme.AppCompat"
                tools:targetApi="o" />


            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/Theme.AppCompat" />

            <Button
                android:id="@+id/forgot_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:foregroundGravity="top"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/forgot_password"
                android:textAlignment="inherit"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="14sp"
                android:textStyle="italic"
                android:theme="@style/Theme.AppCompat"
                android:visibility="visible" />

            <Button
                android:id="@+id/term_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:gravity="top|center_horizontal"
                android:text="@string/terms_policys"
                android:textAlignment="inherit"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="14sp"
                android:textStyle="italic"
                android:theme="@style/Theme.AppCompat"
                android:visibility="visible" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
