<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_history"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:visibility="visible"
tools:context="franklin.register_graves2.ActivityLister">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/history"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="115dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/hist_lo_item_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#1\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hist_lo_item_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#2\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hist_lo_item_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_3"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#3\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hist_lo_item_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_4"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#4\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hist_lo_item_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_5"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#5\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hist_lo_item_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/hist_img_6"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:tooltipText="@string/hist_img_tip"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/hist_item_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:fontFamily="monospace"
                    android:gravity="top|left"
                    android:text="#6\n2018/02/11\nPort Smith Cemetery, GA"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/hist_prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Page Left"
            android:visibility="visible" />

        <Button
            android:id="@+id/hist_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/buttonReturn"
            android:visibility="visible"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="239dp" />

        <Button
            android:id="@+id/hist_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Page Right"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
</LinearLayout>
